[gd_scene load_steps=10 format=3 uid="uid://2ag0awjxgtoq"]

[ext_resource type="AudioStream" uid="uid://dsq6cv704ru5k" path="res://audio/sfx/confetti_pop.mp3" id="1_632ci"]
[ext_resource type="Script" uid="uid://cmiy1deo24hin" path="res://scripts/complete_run_test.gd" id="1_sk125"]
[ext_resource type="AudioStream" uid="uid://der4err17i6eg" path="res://audio/sfx/party_horn.mp3" id="2_sk125"]
[ext_resource type="PackedScene" uid="uid://cro58yaedfu1" path="res://scenes/confetti.tscn" id="2_x5yvn"]
[ext_resource type="AudioStream" uid="uid://b2uy6jruahm6p" path="res://audio/music/disco_sample.mp3" id="3_x5yvn"]
[ext_resource type="FontFile" uid="uid://dv6vfhhf7h5tf" path="res://emulogic.ttf" id="6_vk7ao"]

[sub_resource type="Animation" id="Animation_t6t8d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Top_Layer:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0.745098, 0, 1)]
}

[sub_resource type="Animation" id="Animation_vk7ao"]
resource_name = "label_flicker"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Top_Layer:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0.745098, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s2xxb"]
_data = {
&"RESET": SubResource("Animation_t6t8d"),
&"label_flicker": SubResource("Animation_vk7ao")
}

[node name="complete_run_test" type="Node2D"]
z_index = 1
script = ExtResource("1_sk125")
confetti = ExtResource("2_x5yvn")

[node name="confetti_pop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_632ci")
bus = &"SFX"

[node name="party_horn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_sk125")
bus = &"SFX"

[node name="disco_sample" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_x5yvn")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -174.0
offset_bottom = -174.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Bottom_Layer" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_vk7ao")
theme_override_font_sizes/font_size = 48
text = "GNICE CLIMB!"

[node name="Top_Layer" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.274306
anchor_top = 0.45679
anchor_right = 0.732639
anchor_bottom = 0.549383
offset_bottom = 3.05176e-05
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0.745098, 0, 1)
theme_override_fonts/font = ExtResource("6_vk7ao")
theme_override_font_sizes/font_size = 48
text = "GNICE CLIMB!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_s2xxb")
}
